# ProjectBlackjack

./: .gitignore  Cardback.qml  Newblackjacktest.qml  ProjectBlackjack.cabal  README.md  blackjack.hs  blackjack.qml  mainScrene.qml  newblackjacktest.qml
src/: blackjack.hs
src/qml/: Cardback.qml  Cardback.qmlc  MainScreen.qml  MainScreen.qmlc  blackjack.qml  blackjack.qmlc  future.qml  future.qmlc
