name:                ProjectBlackjack
version:             0.1.0.0
synopsis:            A simple blackjack game
-- description:         
-- license:             
license-file:        LICENSE
author:              Pj Wise, Filip Laestadius
-- maintainer:       
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ProjectBlackjack
  main-is:             blackjack.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:        base >=4.8 && <=4.10,
                        hsqml,
                        text,
                        random,
                        mtl,
                        MonadRandom
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/FilipLae/ProjectBlackjack